add notification service with apis
