# api-gateway/docs/swagger.yaml
@@ -219,6 +219,27 @@ definitions:
       target_amount:
         type: number
     type: object
+  notifications.GetNotificationByidResponse:
+    properties:
+      message:
+        type: string
+      user_id:
+        type: string
+    type: object
+  notifications.ListNotificationResponse:
+    properties:
+      notifications:
+        items:
+          $ref: '#/definitions/notifications.GetNotificationByidResponse'
+        type: array
+    type: object
+  notifications.NotificationsResponse:
+    properties:
+      message:
+        type: string
+      success:
+        type: boolean
+    type: object
   transactions.CreateTransactionRequest:
     properties:
       account_id:
@@ -880,6 +901,88 @@ paths:
       summary: Update Goal
       tags:
       - Goal
+  /notification/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete a notification by user_id
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Notification deleted successfully
+          schema:
+            $ref: '#/definitions/notifications.NotificationsResponse'
+        "404":
+          description: Notification not found
+          schema:
+            type: string
+        "500":
+          description: Error while deleting notification
+          schema:
+            type: string
+      security:
+      - BearerAuth: []
+      summary: Delete Notification
+      tags:
+      - Notification
+    get:
+      consumes:
+      - application/json
+      description: Retrieve a notification by user_id
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Notification retrieved successfully
+          schema:
+            $ref: '#/definitions/notifications.GetNotificationByidResponse'
+        "404":
+          description: Notification not found
+          schema:
+            type: string
+        "500":
+          description: Error while retrieving notification
+          schema:
+            type: string
+      security:
+      - BearerAuth: []
+      summary: Get Notification
+      tags:
+      - Notification
+  /notifications:
+    get:
+      consumes:
+      - application/json
+      description: Retrieve a list of all notifications
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: List of notifications retrieved successfully
+          schema:
+            $ref: '#/definitions/notifications.ListNotificationResponse'
+        "500":
+          description: Error while retrieving notifications
+          schema:
+            type: string
+      security:
+      - BearerAuth: []
+      summary: List Notifications
+      tags:
+      - Notification
   /transaction/create:
     post:
       consumes:
